# senatus

./: .gitignore  README.md  pyproject.toml
senatus/: binanceAPI.py  custom.py  dataTypes.py  indicators.py  strategies.py  test_trader.py  trader.py
senatus/api/: binanceAPI.py
senatus/data/: __init__.py  metric_series.py  price_series.py
senatus/data/indicators/: indicators.py
senatus/indicators/: __init__.py  indicators.py  indicators_utils.py
senatus/plot/: __init__.py  plot.py  plotting.py
test/: test.py
